# pardusedu

./: .gitignore  PARDUSEDU_DETAYLI_ANALIZ.txt  README.md  meson.build  resources.gresource.xml
assets/: style.css
assets/dersler/: dersler.json  fen_5_1.md  fen_5_2.md  fen_5_3.md  fen_5_4.md  fen_5_5.md  fen_5_6.md  fen_5_7.md  fen_6_1.md  fen_6_2.md  fen_6_3.md  fen_6_4.md  fen_6_5.md  fen_6_6.md  fen_6_7.md  ingilizce_5_1.md  ingilizce_6_1.md  matematik_5_1.md  matematik_5_2.md  matematik_6_1.md  matematik_6_2.md  sosyal_5_1.md  sosyal_5_2.md  sosyal_5_3.md  sosyal_5_4.md  sosyal_5_5.md  sosyal_5_6.md  sosyal_6_1.md  sosyal_6_2.md  sosyal_6_3.md  sosyal_6_4.md  sosyal_6_5.md  sosyal_6_6.md  sosyal_6_7.md  turkce_5_1.md  turkce_5_2.md  turkce_5_3.md  turkce_5_4.md  turkce_5_5.md  turkce_5_6.md  (+14 more)
assets/parduslab/: challenges.json
assets/parduslab/files/find_gizli_dosya/home/: .gizli
assets/parduslab/files/yetki_yukselt/etc/sudoers.d/: parduslab
docs/python/: python.md
server/: main.py  models.py
server/templates/: 404.html  note.html
src/: ai_client.cpp  ai_client.h  calc_letter.cpp  calc_letter.h  data_manager.cpp  keyring.cpp  keyring.h  main.cpp  mainwindow.cpp  mainwindow.h  pages.cpp  parduslab.cpp  parduslab.h  ui_setup.cpp
src/pages/: ai_chat.cpp  ai_koc.cpp  badges.cpp  dersler.cpp  flashcards.cpp  focus.cpp  linux.cpp  notes.cpp  page_utils.cpp  parduslab_pages.cpp  planner.cpp  pomodoro.cpp  python.cpp  schedule.cpp  weekly_analysis.cpp
tests/: meson.build  test_calc_letter.cpp  test_extract_ai_reply.cpp
web/: index.html  model.html  screenshots.html
web/css/: gallery.css  style.css
web/js/: gallery.js  main.js
